# zeynep

./: .editorconfig  .eslintrc.js  .gitignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/: cotd.rs  emoji.ts  env.ts  log.ts  main.rs  main.ts
src/commands/: mod.rs  ping.rs
src/modules/: emoji.ts  index.ts
src/util/: cmd.ts
tools/: delcommand.cjs  main.cjs
